Specify architecture in Flutter action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "stable"
+          architecture: x64
 
       - name: Fix safe.directory
         run: |
