--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ jobs:
 
     permissions:
       id-token: write
-      pages: write
 
     steps:
       - name: Checkout source
@@ -41,6 +40,10 @@ jobs:
     needs: build
 
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      pages: write
 
     steps:
       - name: Deploy to GitHub Pages
