Add artifact naming in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: build/web
+          name: github-pages
 
   deploy:
     environment:
