Update GitHub Actions to use correct artifact action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,10 @@ jobs:
       - name: Build Flutter Web
         run: flutter build web
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: build/web
-          name: github-pages
 
   deploy:
     environment:
